test/TestPhases/typechecker/invalid/booleanCallX4.blc
module


activity other (i: bool)()
    await i
end

activity empty ()()
    var x: bool = false

    x = x or true
    run other()
    
end
